fix recipe name overflow & remove scrollbars

--- a/src/index.styl
+++ b/src/index.styl
@@ -2,6 +2,9 @@ active-color = #ff0000
 
 html
   color: #333
+  min-width: 800px
+
+html, .time-created
   font-family: 'Open Sans', sans-serif
 
 h1, h2, h3, h4, h5, h6
@@ -20,7 +23,7 @@ html, body, #app, #app > div
 
 #recipe, #recipe-index, #recipe-editor
   height: 100%
-  overflow-y: scroll
+  overflow-y: auto
 
 #recipe, #recipe-editor
   flex-grow: 1
@@ -30,6 +33,8 @@ html, body, #app, #app > div
   color: white
   position: relative
   padding-right: 80px
+  padding-top: 5px
+  box-sizing: border-box
   height: 80px
 
   .time-created
@@ -43,7 +48,10 @@ html, body, #app, #app > div
   h1
     margin: 0
     padding: 10px
-    margin-top: 5px
+    white-space: nowrap
+    text-overflow: ellipsis
+    overflow: hidden
+    display: block
 
   a
     position: absolute
@@ -72,6 +80,7 @@ recipe-button-width = 220px
   padding: 0
   margin: 0
   flex-shrink: 0
+  border-right: 1px #ccc solid
 
   li
     border-bottom: 1px #ccc solid
@@ -99,8 +108,6 @@ recipe-button-width = 220px
       border-width = 3px
       white-space: nowrap
       width: recipe-button-width
-      overflow: hidden
-      text-overflow: ellipsis
       text-decoration: none
       color: #333
       border-left: transparent border-width solid
@@ -111,6 +118,9 @@ recipe-button-width = 220px
 
       .recipe-name
         // holds the name of the recipe and the time created
+        overflow: hidden
+        text-overflow: ellipsis
+        width: 100%
         line-height: normal
         display: inline-block
         vertical-align: middle
